--- a/imooc-security-demo/src/main/resources/resources/imooc-login(withValidateCode).html
+++ b/imooc-security-demo/src/main/resources/resources/imooc-login(withValidateCode).html
@@ -31,5 +31,27 @@
         </tr>
     </table>
 </form>
+<h2>短信登录页面</h2>
+<form action="/authentication/mobile" method="post">
+    <table>
+        <tr>
+            <td>手机号:</td>
+            <td><input type="text" name="mobile" value="18827406925"></td>
+        </tr>
+        <tr>
+            <td>短信验证码</td>
+            <td>
+                <input type="text" name="smsCode">
+                <a href="/code/sms?mobile=18827406925">发送验证码</a>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <button type="submit" >登录</button>
+                <!--<button type="submit" name="type" value="binding">绑定</button>-->
+            </td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
